--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
+apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.artifactory'
 
-group = 'org.apache.fineract'
-version = '1.5.0-23-g1ac2469-dirty'
+group = 'org.mifos'
+version = '2.0.3-SNAPSHOT'
 
 buildscript {
 repositories {
@@ -12,6 +16,7 @@ jcenter()
 dependencies {
 classpath 'com.android.tools.build:gradle:2.3.+'
 classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.24.23'
 }
 }
 
@@ -120,4 +125,48 @@ exclude group:'org.apache.oltu.oauth2' , module: 'org.apache.oltu.oauth2.common'
 implementation "io.gsonfire:gson-fire:$json_fire_version"
 implementation 'javax.annotation:javax.annotation-api:1.3.2'
 testImplementation "junit:junit:$junit_version"
+}
+
+group = 'org.mifos'
+version = '2.0.3-SNAPSHOT'
+sourceCompatibility = '1.8'
+def artifactId = 'fineract-client'
+def versionNumber = version
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+//            artifactId = rootProject.name
+        }
+    }
+}
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+jar {
+    enabled = true
+}
+
+artifactory {
+    contextUrl = 'https://jfrog.sandbox.fynarfin.io/artifactory' // base artifactory url
+    publish {
+        repository {
+            repoKey = 'fyn-libs-snapshot'    //Artifactory repository key to publish to
+            // username = 'avik@fynarfin.io'    publisher user name
+            // password = '****'                publisher password
+            username = "<admin>"
+            password = "<password>"
+            maven = true
+        }
+        defaults {
+            publications('mavenJava')
+        }
+    }
+
+}
+
+artifactoryPublish {
+    dependsOn jar
 }
