fix duplicate error

--- a/build.gradle
+++ b/build.gradle
@@ -90,11 +90,11 @@ apply plugin: 'java'
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
-//install {
-//repositories.mavenInstaller {
-//pom.artifactId = 'openapi-java-client'
-//}
-//}
+install {
+repositories.mavenInstaller {
+pom.artifactId = 'openapi-java-client'
+}
+}
 
 task execute(type:JavaExec) {
 main = System.getProperty('mainClass')
