--- a/build.gradle
+++ b/build.gradle
@@ -114,9 +114,9 @@ dependencies {
     implementation "io.reactivex:rxjava:$rx_java_version"
     implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
     implementation "com.google.code.findbugs:jsr305:3.0.2"
-//    implementation("org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:$oltu_version") {
-//        exclude group: 'org.apache.oltu.oauth2', module: 'org.apache.oltu.oauth2.common'
-//    }
+    implementation("org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:$oltu_version") {
+        exclude group: 'org.apache.oltu.oauth2', module: 'org.apache.oltu.oauth2.common'
+    }
     implementation "io.gsonfire:gson-fire:$json_fire_version"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     testImplementation "junit:junit:$junit_version"
