--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
+apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.artifactory'
 
-group = 'org.apache.fineract'
-version = '1.5.0-23-g1ac2469-dirty'
+group = 'org.mifos'
+version = '2.0.3-gazelle'
 
 buildscript {
 repositories {
@@ -12,6 +16,7 @@ jcenter()
 dependencies {
 classpath 'com.android.tools.build:gradle:2.3.+'
 classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.24.23'
 }
 }
 
@@ -120,4 +125,55 @@ exclude group:'org.apache.oltu.oauth2' , module: 'org.apache.oltu.oauth2.common'
 implementation "io.gsonfire:gson-fire:$json_fire_version"
 implementation 'javax.annotation:javax.annotation-api:1.3.2'
 testImplementation "junit:junit:$junit_version"
+}
+
+// group = 'org.mifos'
+// version = '2.0.4-SNAPSHOT'
+sourceCompatibility = '1.8'
+def artifactId = 'fineract-client'
+def versionNumber = version
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+//            artifactId = rootProject.name
+        }
+    }
+}
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+jar {
+    enabled = true
+}
+
+artifactory {
+    //contextUrl = 'http://40.82.204.22:8082/artifactory'
+    contextUrl = 'https://mifos.jfrog.io/artifactory'
+    publish {
+        repository {
+            repoKey = 'mifosx-gradle-local' // Use 'oss-release-local' for release versions
+            username = System.getenv('MIFOS_ARTIFACTORY_USER') 
+            password = System.getenv('MIFOS_ARTIFACTORY_TOKEN') 
+            // repoKey = 'mifos-gradle-local' // Use 'oss-release-local' for release versions
+            // username = 'mifos'
+            // password = 'Ei+$c:)f4n"#JbS'
+        }
+        defaults {
+            publications('mavenJava')
+            publishArtifacts = true
+            publishPom = true
+            publishBuildInfo = false  //  build info publishing
+        }
+    }
+    clientConfig.info.setBuildName('mifosx-build-info')
+    clientConfig.info.setBuildNumber(System.currentTimeMillis().toString())
+    clientConfig.setIncludeEnvVars(false)
+    //clientConfig.logLevel = org.jfrog.build.extractor.clientConfiguration.ArtifactoryClientConfiguration.LogLevel.DEBUG
+}
+
+artifactoryPublish {
+    dependsOn jar
 }
